# automata-exchange-conductor-binance

./: .env  Dockerfile  README.md  requirements.txt  setup.cfg
binanceconductor/: BinanceExchangeConductor.py  __init__.py  __main__.py
binanceconductor/data/: BinanceExchangeDataProvider.py
binanceconductor/extractor/: BinanceDataExtractor.py
simulations/exchangeinstrument/: InstrumentExchangeStoreHandler.py  __init__.py
simulations/fetchdata/: __init__.py
simulations/runprofile/: __init__.py
tests/extractor/: BinanceDataExtractor_test.py
