[metadata]
name = persuader-technology-automata-exchange-conductor-binance
version = 0.1.7
description = Automata Binance Exchange Conductor
long_description = file: README.md
long_description_content_type = text/markdown
author = Persuader Technology
author_email = software@persuader.technology
license = UNLICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    requests>=2.27.1
    persuader-technology-automata-core>=0.4.9
    persuader-technology-automata-utilities>=0.1.1
    persuader-technology-automata-redis>=0.1.8
    persuader-technology-automata-process-manager>=0.1.3
    persuader-technology-automata-logger>=0.0.4
    persuader-technology-automata-exchange-conductor>=0.1.1

[options.packages.find]
include = binanceconductor*
exclude =
    tests
    simulations
    .scripts

[options.entry_points]
console_scripts =
    automata-binance-exchange-conductor-start = binanceconductor.__main__:start
